--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/Atrill90/NYT-Scraper/issues"
   },
-  "homepage": "https://github.com/Atrill90/NYT-Scraper#readme"
+  "homepage": "https://github.com/Atrill90/NYT-Scraper#readme",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "cheerio": "^1.0.0-rc.2",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "mongoose": "^5.1.1"
+  }
 }
