--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "scraper for New York Times",
   "main": "app.js",
   "scripts": {
-    "test": "test"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
